--- a/Interview Questions/Python_Refresher.ipynb
+++ b/Interview Questions/Python_Refresher.ipynb
@@ -27,6 +27,62 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "aBzFhCO_mIpM"
+      },
+      "source": [
+        "### Functions"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Ib_keKu7mIAl",
+        "outputId": "0a92719a-3d6e-4dfa-9c41-9da445cb92d5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "import pandas as pd\r\n",
+        "import numpy as np\r\n",
+        "df = pd.DataFrame(np.random.binomial(n=1000, p=0.2, size=(10000,2)))\r\n",
+        "df.head()\r\n",
+        "\r\n",
+        "def sum_square(a,b):\r\n",
+        "  return (a+b)**2\r\n",
+        "\r\n",
+        "df.apply(lambda row: sum_square(row[0], row[1]), raw=True, axis=1)"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0       160000\n",
+              "1       157609\n",
+              "2       166464\n",
+              "3       173889\n",
+              "4       153664\n",
+              "         ...  \n",
+              "9995    147456\n",
+              "9996    170569\n",
+              "9997    128881\n",
+              "9998    152100\n",
+              "9999    153664\n",
+              "Length: 10000, dtype: int64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "yzhmL_YuUM0B"
       },
       "source": [
