--- a/Interview Questions/Python_Refresher.ipynb
+++ b/Interview Questions/Python_Refresher.ipynb
@@ -36,47 +36,383 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Ib_keKu7mIAl",
-        "outputId": "0a92719a-3d6e-4dfa-9c41-9da445cb92d5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Ib_keKu7mIAl",
+        "outputId": "93c18c35-d619-4556-f1b0-6ccb045bff62"
       },
       "source": [
         "import pandas as pd\r\n",
         "import numpy as np\r\n",
-        "df = pd.DataFrame(np.random.binomial(n=1000, p=0.2, size=(10000,2)))\r\n",
-        "df.head()\r\n",
+        "df = pd.DataFrame(np.random.binomial(n=10, p=0.2, size=(100,3)), columns=list('xyz'))\r\n",
         "\r\n",
         "def sum_square(a,b):\r\n",
         "  return (a+b)**2\r\n",
         "\r\n",
-        "df.apply(lambda row: sum_square(row[0], row[1]), raw=True, axis=1)"
+        "print(df.head())\r\n",
+        "\r\n",
+        "# apply() performs the Lambda function along an axis of a DataFrame\r\n",
+        "\r\n",
+        "# Apply function on df where the function uses all the columns of the dataframe\r\n",
+        "# When there are 3 columns but sum_square uses only 2 variables, it is applied on only first 2 columns of df\r\n",
+        "print(\"sum sq on first 2 columns \\n\",df.apply(lambda row: sum_square(row[0], row[1]), raw=True, axis=1).head())\r\n",
+        "\r\n",
+        "# Apply on 1st and 3rd  columns\r\n",
+        "print(\"sum sq on 1st & 3rd columns \\n\",df.apply(lambda row: sum_square(row[0], row[2]), raw=True, axis=1).head())\r\n",
+        "\r\n",
+        "# Apply a function on ONLY single variable\r\n",
+        "print(\"sq on 1st column \\n\",df['x'].map(lambda p: p**2).head())"
       ],
-      "execution_count": 9,
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "   x  y  z\n",
+            "0  3  1  7\n",
+            "1  3  2  2\n",
+            "2  2  1  4\n",
+            "3  1  1  0\n",
+            "4  1  2  1\n",
+            "sum sq on first 2 columns \n",
+            " 0    16\n",
+            "1    25\n",
+            "2     9\n",
+            "3     4\n",
+            "4     9\n",
+            "dtype: int64\n",
+            "sum sq on 1st & 3rd columns \n",
+            " 0    100\n",
+            "1     25\n",
+            "2     36\n",
+            "3      1\n",
+            "4      4\n",
+            "dtype: int64\n",
+            "sq on 1st column \n",
+            " 0    9\n",
+            "1    9\n",
+            "2    4\n",
+            "3    1\n",
+            "4    1\n",
+            "Name: x, dtype: int64\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "c6tMk5I9sYU_",
+        "outputId": "d7cbf01f-31fa-4a4b-ce85-383fe925d67b",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 198
+        }
+      },
+      "source": [
+        "df.apply(lambda x: x*10).head()"
+      ],
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>x</th>\n",
+              "      <th>y</th>\n",
+              "      <th>z</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>30</td>\n",
+              "      <td>10</td>\n",
+              "      <td>70</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>30</td>\n",
+              "      <td>20</td>\n",
+              "      <td>20</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>20</td>\n",
+              "      <td>10</td>\n",
+              "      <td>40</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>10</td>\n",
+              "      <td>10</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>10</td>\n",
+              "      <td>20</td>\n",
+              "      <td>10</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
             "text/plain": [
-              "0       160000\n",
-              "1       157609\n",
-              "2       166464\n",
-              "3       173889\n",
-              "4       153664\n",
-              "         ...  \n",
-              "9995    147456\n",
-              "9996    170569\n",
-              "9997    128881\n",
-              "9998    152100\n",
-              "9999    153664\n",
-              "Length: 10000, dtype: int64"
+              "    x   y   z\n",
+              "0  30  10  70\n",
+              "1  30  20  20\n",
+              "2  20  10  40\n",
+              "3  10  10   0\n",
+              "4  10  20  10"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 9
+          "execution_count": 41
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jhP_aku0tJJH",
+        "outputId": "660a18be-df1e-4943-c3d0-00792b118143",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Column wise\r\n",
+        "df.apply(lambda x: x.sum(), axis=0)"
+      ],
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "x    172\n",
+              "y    202\n",
+              "z    203\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 43
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Ztatqa8esyKa",
+        "outputId": "da97fab0-0f20-4cf1-f3da-66f7a54196da",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 198
+        }
+      },
+      "source": [
+        "#  performs the Lambda function on the DataFrame elementwise\r\n",
+        "df.applymap(lambda x: x*10).head()"
+      ],
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>x</th>\n",
+              "      <th>y</th>\n",
+              "      <th>z</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>30</td>\n",
+              "      <td>10</td>\n",
+              "      <td>70</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>30</td>\n",
+              "      <td>20</td>\n",
+              "      <td>20</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>20</td>\n",
+              "      <td>10</td>\n",
+              "      <td>40</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>10</td>\n",
+              "      <td>10</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>10</td>\n",
+              "      <td>20</td>\n",
+              "      <td>10</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "    x   y   z\n",
+              "0  30  10  70\n",
+              "1  30  20  20\n",
+              "2  20  10  40\n",
+              "3  10  10   0\n",
+              "4  10  20  10"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 42
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ODc7Q5ceoGhi",
+        "outputId": "6a7c6322-92cf-4e92-abbf-cdc6a387f50b",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 198
+        }
+      },
+      "source": [
+        "def cm_to_mm(cm):\r\n",
+        "    mm = cm * 10\r\n",
+        "    return mm\r\n",
+        "df.apply(cm_to_mm).head()"
+      ],
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>x</th>\n",
+              "      <th>y</th>\n",
+              "      <th>z</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>30</td>\n",
+              "      <td>10</td>\n",
+              "      <td>70</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>30</td>\n",
+              "      <td>20</td>\n",
+              "      <td>20</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>20</td>\n",
+              "      <td>10</td>\n",
+              "      <td>40</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>10</td>\n",
+              "      <td>10</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>10</td>\n",
+              "      <td>20</td>\n",
+              "      <td>10</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "    x   y   z\n",
+              "0  30  10  70\n",
+              "1  30  20  20\n",
+              "2  20  10  40\n",
+              "3  10  10   0\n",
+              "4  10  20  10"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 40
         }
       ]
     },
