--- a/Modeling/SplittingData.ipynb
+++ b/Modeling/SplittingData.ipynb
@@ -6,7 +6,7 @@
       "name": "SplittingData.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNfZAScVH3PkWNv1sZx4eDp",
+      "authorship_tag": "ABX9TyNAil4i7pdh+QpBjel1iGob",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,7 +32,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LdzUDNy664WA",
-        "outputId": "4687ede2-bd24-47b5-d964-c555cc612991"
+        "outputId": "b88128bf-3d80-47ef-d256-1eb996841041"
       },
       "source": [
         "!pip install pyfarmhash"
@@ -42,7 +42,16 @@
         {
           "output_type": "stream",
           "text": [
-            "Requirement already satisfied: pyfarmhash in /usr/local/lib/python3.6/dist-packages (0.2.2)\n"
+            "Collecting pyfarmhash\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/31/85/303d07e39cf506af7b0da997eee5f3b1ecbfb8ade0370ed5c0f4f96d8c96/pyfarmhash-0.2.2.tar.gz (99kB)\n",
+            "\r\u001b[K     |███▎                            | 10kB 18.3MB/s eta 0:00:01\r\u001b[K     |██████▋                         | 20kB 17.0MB/s eta 0:00:01\r\u001b[K     |██████████                      | 30kB 9.2MB/s eta 0:00:01\r\u001b[K     |█████████████▏                  | 40kB 8.5MB/s eta 0:00:01\r\u001b[K     |████████████████▌               | 51kB 4.4MB/s eta 0:00:01\r\u001b[K     |███████████████████▉            | 61kB 4.9MB/s eta 0:00:01\r\u001b[K     |███████████████████████         | 71kB 5.0MB/s eta 0:00:01\r\u001b[K     |██████████████████████████▍     | 81kB 5.3MB/s eta 0:00:01\r\u001b[K     |█████████████████████████████▊  | 92kB 5.7MB/s eta 0:00:01\r\u001b[K     |████████████████████████████████| 102kB 4.2MB/s \n",
+            "\u001b[?25hBuilding wheels for collected packages: pyfarmhash\n",
+            "  Building wheel for pyfarmhash (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for pyfarmhash: filename=pyfarmhash-0.2.2-cp36-cp36m-linux_x86_64.whl size=66877 sha256=a24cd4a3b158054365208b4091ab60cd177209cc9ebb5d63bf24004e6e96b18c\n",
+            "  Stored in directory: /root/.cache/pip/wheels/3f/41/10/80e03a3ffa9ba29a41eac65c4371ade0bd1e21dbdabb867c31\n",
+            "Successfully built pyfarmhash\n",
+            "Installing collected packages: pyfarmhash\n",
+            "Successfully installed pyfarmhash-0.2.2\n"
           ],
           "name": "stdout"
         }
@@ -95,10 +104,10 @@
             }
           },
           "base_uri": "https://localhost:8080/",
-          "height": 37
+          "height": 72
         },
         "id": "Jzq6rxee64Mz",
-        "outputId": "31f611b7-df58-45d6-f973-2fcd8cfc249f"
+        "outputId": "c75cab7e-96bd-411e-eb4d-264e6dbb550d"
       },
       "source": [
         "from google.colab import files\r\n",
@@ -111,9 +120,9 @@
           "data": {
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-950c6f58-9b10-4a17-8af1-de25f7e8abe2\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-f6f70be7-a328-4113-8ab2-6fb690f0e843\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-950c6f58-9b10-4a17-8af1-de25f7e8abe2\">\n",
+              "     <output id=\"result-f6f70be7-a328-4113-8ab2-6fb690f0e843\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -126,6 +135,13 @@
           "metadata": {
             "tags": []
           }
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "Saving employees.csv to employees.csv\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -169,10 +185,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 198
+          "height": 197
         },
         "id": "hmSw4jm-7S7K",
-        "outputId": "18ef06f8-133b-4bde-c620-525a5bd0d25e"
+        "outputId": "6b566264-c741-4ba9-ee51-bc1b6bf85b5a"
       },
       "source": [
         "Employees.head()"
@@ -220,8 +236,8 @@
               "      <td>6.945</td>\n",
               "      <td>True</td>\n",
               "      <td>Marketing</td>\n",
-              "      <td>1995-09-01</td>\n",
-              "      <td>1</td>\n",
+              "      <td>1997-09-12</td>\n",
+              "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
@@ -231,8 +247,8 @@
               "      <td>NaN</td>\n",
               "      <td>True</td>\n",
               "      <td>NaN</td>\n",
-              "      <td>1995-08-04</td>\n",
-              "      <td>1</td>\n",
+              "      <td>1991-03-12</td>\n",
+              "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
@@ -242,7 +258,7 @@
               "      <td>11.858</td>\n",
               "      <td>False</td>\n",
               "      <td>Finance</td>\n",
-              "      <td>1999-11-02</td>\n",
+              "      <td>1992-12-10</td>\n",
               "      <td>1</td>\n",
               "    </tr>\n",
               "    <tr>\n",
@@ -253,7 +269,7 @@
               "      <td>9.340</td>\n",
               "      <td>True</td>\n",
               "      <td>Finance</td>\n",
-              "      <td>1998-01-02</td>\n",
+              "      <td>1992-01-20</td>\n",
               "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
@@ -264,7 +280,7 @@
               "      <td>1.389</td>\n",
               "      <td>True</td>\n",
               "      <td>Client Services</td>\n",
-              "      <td>1994-11-10</td>\n",
+              "      <td>1997-09-14</td>\n",
               "      <td>1</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
@@ -280,11 +296,11 @@
               "4      Larry    Male  101004.0    1.389              True  Client Services   \n",
               "\n",
               "  Date_of_Birth  Target  \n",
-              "0    1995-09-01       1  \n",
-              "1    1995-08-04       1  \n",
-              "2    1999-11-02       1  \n",
-              "3    1998-01-02       0  \n",
-              "4    1994-11-10       1  "
+              "0    1997-09-12       0  \n",
+              "1    1991-03-12       0  \n",
+              "2    1992-12-10       1  \n",
+              "3    1992-01-20       0  \n",
+              "4    1997-09-14       1  "
             ]
           },
           "metadata": {
@@ -301,7 +317,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QG-7nmF27U_h",
-        "outputId": "c6e9e2db-7814-411e-e462-45f5b4058d2a"
+        "outputId": "75418dcb-f2b3-4f05-e7fd-1d74b0b7d035"
       },
       "source": [
         "from sklearn.model_selection import train_test_split\r\n",
@@ -342,7 +358,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7b1J29e09X7q",
-        "outputId": "9699c212-2cb1-41e5-9bdb-d414a1356749"
+        "outputId": "4f05bc12-effa-4bf0-a9ca-e6d7585d5fe9"
       },
       "source": [
         "pd.value_counts(Employees['First Name']).head()"
@@ -355,9 +371,9 @@
             "text/plain": [
               "Marilyn    11\n",
               "Jeremy     10\n",
-              "Todd       10\n",
               "Barbara    10\n",
-              "Cynthia     9\n",
+              "Todd       10\n",
+              "Irene       9\n",
               "Name: First Name, dtype: int64"
             ]
           },
@@ -375,7 +391,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cia3yvY_8FFL",
-        "outputId": "94480ddd-4183-481d-c3da-f10a3bfe2e23"
+        "outputId": "2e9b403f-3302-400b-84cf-925b51129585"
       },
       "source": [
         "import random\r\n",
@@ -397,8 +413,8 @@
         {
           "output_type": "stream",
           "text": [
-            "(808, 8)\n",
-            "(192, 8)\n"
+            "(823, 8)\n",
+            "(177, 8)\n"
           ],
           "name": "stdout"
         }
@@ -411,7 +427,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HgEGfran99Nn",
-        "outputId": "bde9b9b0-7ec1-474d-ed0d-ed0e419f5a31"
+        "outputId": "f3f068a7-140d-405e-a5d6-b2ad1d97437e"
       },
       "source": [
         "# Split first 80% rows into Train and remaining 20% rows into Test\r\n",
@@ -513,7 +529,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YrBtKmOmGFaK",
-        "outputId": "db62b348-1517-4c69-f09a-29480b7335ab"
+        "outputId": "139d8a3b-977a-434c-bfd5-4978f2d3511b"
       },
       "source": [
         "# split data based on hash column\r\n",
@@ -528,8 +544,8 @@
         {
           "output_type": "stream",
           "text": [
-            "(487, 11)\n",
-            "(255, 11)\n"
+            "(515, 11)\n",
+            "(227, 11)\n"
           ],
           "name": "stdout"
         }
@@ -542,7 +558,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TDh46wtXGvBD",
-        "outputId": "3e7193c8-1b2f-4434-d4bc-15f578a08b12"
+        "outputId": "d374959e-db5b-4bda-cf3a-56a9f1916303"
       },
       "source": [
         "np.unique(abs(Employees.LoginDate_Hash%10))"
@@ -568,10 +584,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 322
+          "height": 197
         },
         "id": "ocGqjtWIDuIK",
-        "outputId": "b856833a-c9f2-457e-82aa-b7ab48b35de6"
+        "outputId": "c8646c29-c14e-4e96-a123-1f40af97de3c"
       },
       "source": [
         "Employees.head()"
@@ -622,11 +638,11 @@
               "      <td>6.945</td>\n",
               "      <td>True</td>\n",
               "      <td>Marketing</td>\n",
-              "      <td>1995-09-01</td>\n",
-              "      <td>1</td>\n",
-              "      <td>2020-07-06</td>\n",
+              "      <td>1997-09-12</td>\n",
+              "      <td>0</td>\n",
+              "      <td>2020-07-04</td>\n",
               "      <td>13089925452571571431</td>\n",
-              "      <td>16300727701055580090</td>\n",
+              "      <td>5110218570070884505</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
@@ -636,11 +652,11 @@
               "      <td>11.858</td>\n",
               "      <td>False</td>\n",
               "      <td>Finance</td>\n",
-              "      <td>1999-11-02</td>\n",
+              "      <td>1992-12-10</td>\n",
               "      <td>1</td>\n",
-              "      <td>2020-07-15</td>\n",
+              "      <td>2020-07-13</td>\n",
               "      <td>7977770318440479964</td>\n",
-              "      <td>10797819490020524296</td>\n",
+              "      <td>12944729872673653367</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
@@ -650,11 +666,11 @@
               "      <td>1.389</td>\n",
               "      <td>True</td>\n",
               "      <td>Client Services</td>\n",
-              "      <td>1994-11-10</td>\n",
+              "      <td>1997-09-14</td>\n",
               "      <td>1</td>\n",
-              "      <td>2020-07-06</td>\n",
+              "      <td>2020-07-07</td>\n",
               "      <td>1017167388419051281</td>\n",
-              "      <td>16300727701055580090</td>\n",
+              "      <td>16496207191609800238</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>6</th>\n",
@@ -664,11 +680,11 @@
               "      <td>10.012</td>\n",
               "      <td>True</td>\n",
               "      <td>Product</td>\n",
-              "      <td>1998-02-16</td>\n",
+              "      <td>1993-05-05</td>\n",
               "      <td>0</td>\n",
-              "      <td>2020-07-08</td>\n",
+              "      <td>2020-07-04</td>\n",
               "      <td>6548883630689698183</td>\n",
-              "      <td>16006236343228386729</td>\n",
+              "      <td>5110218570070884505</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>9</th>\n",
@@ -678,11 +694,11 @@
               "      <td>7.524</td>\n",
               "      <td>True</td>\n",
               "      <td>Business Development</td>\n",
-              "      <td>1995-11-28</td>\n",
+              "      <td>1998-12-05</td>\n",
               "      <td>1</td>\n",
-              "      <td>2020-07-08</td>\n",
+              "      <td>2020-07-05</td>\n",
               "      <td>4116071532306498785</td>\n",
-              "      <td>16006236343228386729</td>\n",
+              "      <td>17670039732204069343</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -697,18 +713,18 @@
               "9    Frances  Female  139852.0    7.524              True   \n",
               "\n",
               "                   Team Date_of_Birth  Target  LoginDate  \\\n",
-              "0             Marketing    1995-09-01       1 2020-07-06   \n",
-              "2               Finance    1999-11-02       1 2020-07-15   \n",
-              "4       Client Services    1994-11-10       1 2020-07-06   \n",
-              "6               Product    1998-02-16       0 2020-07-08   \n",
-              "9  Business Development    1995-11-28       1 2020-07-08   \n",
+              "0             Marketing    1997-09-12       0 2020-07-04   \n",
+              "2               Finance    1992-12-10       1 2020-07-13   \n",
+              "4       Client Services    1997-09-14       1 2020-07-07   \n",
+              "6               Product    1993-05-05       0 2020-07-04   \n",
+              "9  Business Development    1998-12-05       1 2020-07-05   \n",
               "\n",
               "              Name_Hash        LoginDate_Hash  \n",
-              "0  13089925452571571431  16300727701055580090  \n",
-              "2   7977770318440479964  10797819490020524296  \n",
-              "4   1017167388419051281  16300727701055580090  \n",
-              "6   6548883630689698183  16006236343228386729  \n",
-              "9   4116071532306498785  16006236343228386729  "
+              "0  13089925452571571431   5110218570070884505  \n",
+              "2   7977770318440479964  12944729872673653367  \n",
+              "4   1017167388419051281  16496207191609800238  \n",
+              "6   6548883630689698183   5110218570070884505  \n",
+              "9   4116071532306498785  17670039732204069343  "
             ]
           },
           "metadata": {
@@ -725,7 +741,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MOc0HkhqAAbf",
-        "outputId": "e756798b-1a33-4005-b8e1-506befc9691f"
+        "outputId": "2d3c696f-3083-4af9-aefe-0105fc6ea78c"
       },
       "source": [
         "import farmhash\r\n",
@@ -749,7 +765,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZM-bXw4aBTYi",
-        "outputId": "1c94e1fb-1788-4066-bb92-06ac06e2ee46"
+        "outputId": "f458c69c-27f0-4e69-c7c7-900c80091bfc"
       },
       "source": [
         "print(farmhash.fingerprint64('6823339101'))"
@@ -773,7 +789,7 @@
           "height": 35
         },
         "id": "_y44XcQ6FTqj",
-        "outputId": "a9fbf821-f593-4292-ddb6-9f1710312619"
+        "outputId": "e296c19e-09d8-41d7-8295-a4f49f78bfe0"
       },
       "source": [
         "import hashlib\r\n",
@@ -798,6 +814,15 @@
           },
           "execution_count": 23
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "0HX8q-MbFVWf"
+      },
+      "source": [
+        "### Cross-validation: manual upsample within folds is same as Using the imblearn pipeline https://kiwidamien.github.io/how-to-do-cross-validation-when-upsampling-data.html"
       ]
     }
   ]
