--- a/Modeling/SplittingData.ipynb
+++ b/Modeling/SplittingData.ipynb
@@ -6,7 +6,7 @@
       "name": "SplittingData.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNAil4i7pdh+QpBjel1iGob",
+      "authorship_tag": "ABX9TyPovZ4pzN9vKqJiOT0gT5JE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
       "source": [
         "!pip install pyfarmhash"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -70,7 +70,7 @@
         "from matplotlib import pyplot as plt\r\n",
         "import seaborn as sns"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -82,7 +82,7 @@
         "pd.set_option('display.max_columns', None)  # or 1000\r\n",
         "pd.set_option('display.max_rows', None)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -113,7 +113,7 @@
         "from google.colab import files\r\n",
         "uploaded = files.upload()"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -155,7 +155,7 @@
         "missing_value_formats = [\"n.a.\",\"?\",\"NA\",\"n/a\", \"na\", \"--\"]\r\n",
         "Employees = pd.read_csv(\"employees.csv\", na_values = missing_value_formats)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -166,7 +166,7 @@
       "source": [
         "Employees['Date_of_Birth'] = [np.random.choice(pd.date_range(start='1990-01-01',end='2000-12-31')) for i in range(Employees.shape[0])]"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -177,7 +177,7 @@
       "source": [
         "Employees['Target'] = np.random.randint(0,2, size=Employees.shape[0]) "
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -193,7 +193,7 @@
       "source": [
         "Employees.head()"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -337,7 +337,7 @@
         "print(Train.shape)\r\n",
         "print(Test.shape)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -363,7 +363,7 @@
       "source": [
         "pd.value_counts(Employees['First Name']).head()"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -408,7 +408,7 @@
         "print(Train.shape)\r\n",
         "print(Test.shape)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -439,7 +439,7 @@
         "print(Train.shape)\r\n",
         "print(Test.shape)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -460,7 +460,7 @@
         "# Splitting based on date variable\r\n",
         "# just filter the data"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -482,7 +482,7 @@
       "source": [
         "Employees['LoginDate'] = [np.random.choice(pd.date_range(start='2020-06-30',end='2020-07-15')) for i in range(Employees.shape[0])]"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -493,7 +493,7 @@
       "source": [
         "Employees = Employees.dropna()"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -508,7 +508,7 @@
         "Employees['Name_Hash'] = Employees['First Name'].map(farmhash.hash64)\r\n",
         "# df.apply(lambda x: farmhash.hash64(x)) # on whole dataframe use apply"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -519,7 +519,7 @@
       "source": [
         "Employees['LoginDate_Hash'] = Employees['LoginDate'].astype(str).map(farmhash.hash64)"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -539,7 +539,7 @@
         "print(Train.shape)\r\n",
         "print(Test.shape)"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -563,7 +563,7 @@
       "source": [
         "np.unique(abs(Employees.LoginDate_Hash%10))"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -592,7 +592,7 @@
       "source": [
         "Employees.head()"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -747,7 +747,7 @@
         "import farmhash\r\n",
         "print(farmhash.hash64('6823339101'))"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -770,7 +770,7 @@
       "source": [
         "print(farmhash.fingerprint64('6823339101'))"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -797,7 +797,7 @@
         "\r\n",
         "hashlib.md5(('6823339101').encode()).hexdigest()"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -823,6 +823,286 @@
       },
       "source": [
         "### Cross-validation: manual upsample within folds is same as Using the imblearn pipeline https://kiwidamien.github.io/how-to-do-cross-validation-when-upsampling-data.html"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wX6eKRgTHpW0"
+      },
+      "source": [
+        "import warnings\r\n",
+        "warnings.simplefilter('ignore')\r\n",
+        "\r\n",
+        "from imblearn.pipeline import Pipeline, make_pipeline\r\n",
+        "from sklearn.ensemble import RandomForestClassifier\r\n",
+        "from sklearn.model_selection import cross_val_score,KFold,GridSearchCV\r\n",
+        "from sklearn.metrics import recall_score"
+      ],
+      "execution_count": 49,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CKeAd4zsIIgc"
+      },
+      "source": [
+        "# Extract only numeric variables\r\n",
+        "Employees_Num = Employees.select_dtypes(include = np.number)\r\n",
+        "\r\n",
+        "# Seperate Independant variables from Dependent variable\r\n",
+        "X = Employees_Num.drop(['Target'],axis=1)\r\n",
+        "y = Employees_Num[['Target']]\r\n",
+        "\r\n",
+        "# Splitting 80% project_data into Train and remaining as Test data. shuffle=True is default\r\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.20, stratify=Employees.Target, random_state=42)\r\n"
+      ],
+      "execution_count": 50,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 197
+        },
+        "id": "zGI8gZGPJAnJ",
+        "outputId": "0fb368f3-9c5d-4612-e1aa-7c06a3413082"
+      },
+      "source": [
+        "Employees_Num.head()"
+      ],
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Salary</th>\n",
+              "      <th>Bonus %</th>\n",
+              "      <th>Target</th>\n",
+              "      <th>Name_Hash</th>\n",
+              "      <th>LoginDate_Hash</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>97308.0</td>\n",
+              "      <td>6.945</td>\n",
+              "      <td>0</td>\n",
+              "      <td>13089925452571571431</td>\n",
+              "      <td>5110218570070884505</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>130590.0</td>\n",
+              "      <td>11.858</td>\n",
+              "      <td>1</td>\n",
+              "      <td>7977770318440479964</td>\n",
+              "      <td>12944729872673653367</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>101004.0</td>\n",
+              "      <td>1.389</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1017167388419051281</td>\n",
+              "      <td>16496207191609800238</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6</th>\n",
+              "      <td>65476.0</td>\n",
+              "      <td>10.012</td>\n",
+              "      <td>0</td>\n",
+              "      <td>6548883630689698183</td>\n",
+              "      <td>5110218570070884505</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>9</th>\n",
+              "      <td>139852.0</td>\n",
+              "      <td>7.524</td>\n",
+              "      <td>1</td>\n",
+              "      <td>4116071532306498785</td>\n",
+              "      <td>17670039732204069343</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "     Salary  Bonus %  Target             Name_Hash        LoginDate_Hash\n",
+              "0   97308.0    6.945       0  13089925452571571431   5110218570070884505\n",
+              "2  130590.0   11.858       1   7977770318440479964  12944729872673653367\n",
+              "4  101004.0    1.389       1   1017167388419051281  16496207191609800238\n",
+              "6   65476.0   10.012       0   6548883630689698183   5110218570070884505\n",
+              "9  139852.0    7.524       1   4116071532306498785  17670039732204069343"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 51
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fhEmzJLPHspt",
+        "outputId": "9af90f49-a0c8-42c2-aa2d-889d8ff6db22"
+      },
+      "source": [
+        "imba_pipeline = make_pipeline(SMOTE(random_state=42), \r\n",
+        "                              RandomForestClassifier(n_estimators=100, random_state=13))\r\n",
+        "\r\n",
+        "kf = KFold(n_splits=5, random_state=42, shuffle=False)\r\n",
+        "cross_val_score(imba_pipeline, X_train, y_train, scoring='recall', cv=kf)\r\n",
+        "# Returns Array of scores of the estimator for each run of the cross validation."
+      ],
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0.57377049, 0.50909091, 0.49315068, 0.51785714, 0.45454545])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 52
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "iJ0Yc_ZYJbol"
+      },
+      "source": [
+        "# Hyperparameter Tuning\r\n",
+        "params = {\r\n",
+        "    'n_estimators': [50, 100, 200],\r\n",
+        "    'max_depth': [4, 6, 10, 12],\r\n",
+        "    'random_state': [13]\r\n",
+        "}\r\n",
+        "new_params = {'randomforestclassifier__' + key: params[key] for key in params}\r\n",
+        "grid_imba = GridSearchCV(imba_pipeline, param_grid=new_params, cv=kf, scoring='recall', return_train_score=True)\r\n",
+        "grid_imba.fit(X_train, y_train);"
+      ],
+      "execution_count": 53,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mi7PZW3NKAOM",
+        "outputId": "d4319e24-58ca-428d-c125-c227a1846b42"
+      },
+      "source": [
+        "grid_imba.best_params_"
+      ],
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'randomforestclassifier__max_depth': 10,\n",
+              " 'randomforestclassifier__n_estimators': 200,\n",
+              " 'randomforestclassifier__random_state': 13}"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 54
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "f46owBgcKDUd",
+        "outputId": "12d848f9-0f24-428c-c2db-5a40c2531808"
+      },
+      "source": [
+        "grid_imba.best_score_"
+      ],
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.5023917919044799"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 55
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8o1MCsEnKF4C",
+        "outputId": "9dd11a0f-5996-4824-f940-d0d816f79e9c"
+      },
+      "source": [
+        "y_test_predict = grid_imba.predict(X_test)\r\n",
+        "recall_score(y_test, y_test_predict)"
+      ],
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.3684210526315789"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 56
+        }
       ]
     }
   ]
